Changelog
=========

4.4.dev0 - (unreleased)
-----------------------

4.3 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

4.2 - (2017-04-04)
------------------
* Change: print the step number before executing it, to facilitate
  resuming
  [tiberich]
* Change: pep8 fixes in buildout.py
  [tiberich]

4.1 - (2017-01-17)
------------------
* Bug fix: Fix print_pypi_plone_unreleased_eggs
  [avoinea]

4.0 - (2016-11-14)
------------------
* Change: pep8 fixes in monkey.py and scm.py
  [tiberich]
* BugFix: "git pull" no longer takes "-u" flag
  [tiberich #73195]
* Feature: allow resuming broken release processes.
  Use -R<step number>, for example bin/monkey -R4 eea.something
  to resume the release process after the process was broken
  and aborted in step 4
  [tiberich #73195]

3.9 - (2016-08-03)
------------------
* Change: Include sparql-client in pypi release check
  [avoinea]

3.8 - (2015-12-07)
------------------
* Change: Added system dependencies within setup.py
  [voineali refs #27406]

3.7 - (2015-11-23)
------------------
* Bug fix: Fixed release check on pypi
  [voineali]

3.6 - (2015-11-16)
------------------
* Change: Disable release check on plone.org
  [voineali]

3.5 - (2015-10-05)
------------------
* Bug fix: use eventlet to prevent hanging out connection
  [lucas refs #29063]

3.4 - (2015-06-03)
------------------
* Bug fix: fixed legacy versions check
  [ghicaale refs #25722]

3.3 - (2015-06-02)
------------------
* Bug fix: fixed missing import
  [ghicaale refs #25722]

3.2 - (2015-02-03)
------------------
* Feature: Updated versioning schema to follow PEP440 versioning conventions
  [olimpiurob refs #22612]

3.1 - (2014-09-19)
------------------
* Feature: all errors reported now include the path to the repository.
  [ghicaale refs #20520]

3.0 - (2014-02-13)
------------------
* Change: go back to the behaviour introduced in egg 2.8 as 2.9 gave an error
  when attempting to add files with git